--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,115 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/avatar_color"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/post_margin"
-    android:layout_marginStart="@dimen/post_margin"
-    android:layout_marginTop="@dimen/post_margin"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/postList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo"
-        android:layout_marginTop="@dimen/post_margin"
-        android:layout_marginStart="@dimen/post_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="datedatedate"
-        android:textSize="@dimen/date_text_size"
-        android:layout_marginStart="@dimen/post_margin"
-        app:layout_constraintTop_toTopOf="@id/logo"
-        app:layout_constraintStart_toEndOf="@id/logo"/>
-
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="author"
-        android:textColor="@color/main_text_color"
-        android:textSize="@dimen/main_text_size"
-        android:layout_marginStart="@dimen/post_margin"
-        app:layout_constraintBottom_toBottomOf="@id/logo"
-        app:layout_constraintStart_toEndOf="@id/logo"/>
-
-    <TextView
-        android:id="@+id/mainText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/main_text_size"
-        android:text="Some text here"
-        android:textColor="@color/main_text_color"
-        android:layout_marginTop="@dimen/post_margin"
-        app:layout_constraintStart_toStartOf="@id/logo"
-        app:layout_constraintTop_toBottomOf="@id/logo" />
-
-    <ImageButton
-        android:id="@+id/like"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_favorite"
-        android:layout_marginTop="@dimen/margin_icons_top"
-        android:layout_marginEnd="@dimen/margin_icons_count"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/like_count"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
-
-    <TextView
-        android:id="@+id/like_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="42"
-        android:layout_marginEnd="@dimen/margin_icons_side"
-        app:layout_constraintEnd_toStartOf="@id/comment"
-        app:layout_constraintBottom_toBottomOf="@id/like"
-        app:layout_constraintTop_toTopOf="@id/like" />
-
-    <ImageButton
-        android:id="@+id/comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_comment"
-        android:layout_marginEnd="@dimen/margin_icons_count"
-        android:layout_marginTop="@dimen/margin_icons_top"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/comment_count"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
-
-    <TextView
-        android:id="@+id/comment_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="42"
-        android:layout_marginEnd="@dimen/margin_icons_side"
-        app:layout_constraintEnd_toStartOf="@id/share"
-        app:layout_constraintBottom_toBottomOf="@id/like"
-        app:layout_constraintTop_toTopOf="@id/like" />
-
-    <ImageButton
-        android:id="@+id/share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_share"
-        android:layout_marginTop="@dimen/margin_icons_top"
-        android:layout_marginEnd="@dimen/margin_icons_count"
-        app:layout_constraintEnd_toStartOf="@id/share_count"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
-
-    <TextView
-        android:id="@+id/share_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="42"
-        android:layout_marginEnd="@dimen/margin_icons_side"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/like"
-        app:layout_constraintTop_toTopOf="@id/like" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
