--- a/app/src/main/res/layout/video_post.xml
+++ b/app/src/main/res/layout/video_post.xml
@@ -53,6 +53,15 @@
         app:layout_constraintTop_toBottomOf="@id/logo"
         tools:text="Some text here" />
 
+    <VideoView
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_icons_top"
+        app:layout_constraintTop_toBottomOf="@id/mainText"
+        app:layout_constraintBottom_toTopOf="@id/like"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageButton
         android:id="@+id/like"
@@ -63,7 +72,7 @@
         android:layout_marginEnd="@dimen/margin_icons_side"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/comment"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
+        app:layout_constraintTop_toBottomOf="@id/video" />
 
     <TextView
         android:id="@+id/likesCount"
@@ -80,11 +89,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_comment"
-        android:layout_marginEnd="@dimen/margin_icons_side"
         android:layout_marginTop="@dimen/margin_icons_top"
+        android:layout_marginEnd="@dimen/margin_icons_side"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/share"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
+        app:layout_constraintTop_toBottomOf="@id/video" />
 
     <TextView
         android:id="@+id/commentsCount"
@@ -100,12 +109,12 @@
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_icons_top"
         android:background="@drawable/ic_share"
+        android:layout_marginTop="@dimen/margin_icons_top"
         android:layout_marginEnd="@dimen/margin_icons_side"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
+        app:layout_constraintTop_toBottomOf="@id/video" />
 
     <TextView
         android:id="@+id/shareCount"
