--- a/app/src/main/res/layout/ads_post.xml
+++ b/app/src/main/res/layout/ads_post.xml
@@ -11,15 +11,14 @@
     android:layout_marginTop="@dimen/post_margin"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/logo"
+    <TextView
+        android:id="@+id/ad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo"
-        android:layout_marginTop="@dimen/post_margin"
-        android:layout_marginStart="@dimen/post_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Рекламный пост"
+        android:layout_marginEnd="@dimen/post_margin"
+        app:layout_constraintEnd_toStartOf="@id/delete"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/date"
@@ -31,6 +30,25 @@
         app:layout_constraintTop_toTopOf="@id/logo"
         app:layout_constraintStart_toEndOf="@id/logo"/>
 
+    <ImageButton
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_logo"
+        android:layout_marginTop="@dimen/post_margin"
+        android:layout_marginStart="@dimen/post_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
@@ -39,7 +57,7 @@
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/main_text_size"
         android:layout_marginStart="@dimen/post_margin"
-        app:layout_constraintBottom_toBottomOf="@id/logo"
+        app:layout_constraintTop_toTopOf="@id/logo"
         app:layout_constraintStart_toEndOf="@id/logo"/>
 
     <TextView
@@ -49,10 +67,9 @@
         android:textSize="@dimen/main_text_size"
         android:textColor="@color/main_text_color"
         android:layout_marginTop="@dimen/post_margin"
-        app:layout_constraintStart_toStartOf="@id/logo"
+        app:layout_constraintStart_toStartOf="@id/author"
         app:layout_constraintTop_toBottomOf="@id/logo"
         tools:text="Some text here" />
-
 
     <ImageButton
         android:id="@+id/like"
@@ -116,4 +133,5 @@
         app:layout_constraintStart_toEndOf="@+id/share"
         app:layout_constraintTop_toTopOf="@id/like"
         tools:text="42" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
